--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,15 +7,19 @@
 
     <fragment
         android:id="@+id/navigation_home"
+        android:name="com.felype.AndroidAppTemplate.ui.home.HomeFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
+        android:name="com.felype.AndroidAppTemplate.ui.dashboard.DashboardFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
- />
+        android:id="@+id/navigation_profile"
+        android:name="com.felype.AndroidAppTemplate.ui.usuario.PerfilUsuarioFragment"
+        android:label="@string/title_profile"
+        tools:layout="@layout/fragment_perfil_usuario" />
 </navigation>
