--- a/app/src/main/res/layout/custom_notification.xml
+++ b/app/src/main/res/layout/custom_notification.xml
@@ -7,18 +7,22 @@
 
     <TextView
         android:id="@+id/status_text"
-        android:text="Status do pedido"
-        android:textStyle="bold"
-        android:textSize="16sp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent"
+        android:backgroundTint="#7C0A0A"
+        android:text="Seu produto está sendo Preparado"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:visibility="visible" />
 
     <ProgressBar
         android:id="@+id/progress_bar"
-        style="?android:attr/progressBarStyleHorizontal"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="10dp"
-        android:progress="33"
+        android:indeterminateBehavior="repeat"
+        android:indeterminateOnly="false"
         android:max="100"
+        android:progress="33"
         android:progressDrawable="@drawable/progress_bar_drawable" />
 </LinearLayout>
